Primeiro commit da ferramente de strings

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <body>
     <main>
             <div class="left">
-                <h1>Conversor de texto!</h1>
-                <h2>Use seu conversor de texto para obter uma string da forma que escolher!</h2>
+                <div class="titulo">
+                    <h1>Conversor de texto!</h1>
+                    <h2>Use seu conversor de texto para obter uma string da forma que escolher!</h2>
+                </div>
                     <div class="caracter">
                         
                         <textarea name="string" placeholder="Escreva ou copie seu conteúdo aqui" id="entrada" cols="120" style="resize: none; margin-top: 3%; background-color: #C5C3C6; overflow: auto;" rows="10"></textarea>
